# Trok_et_al_JGR2023-v1

./: LICENSE  README.md  README.txt  pyproject.toml  setup.py
input_data_ERA5/: 0_make_region_dir.sh  1_check_for_missing_files.ipynb  2_queue_missing_requests.ipynb  3_download_missing_requests.ipynb  4_convert_hourly_2_daily.ipynb  5_regrid_to_ncep_t62.sh  README.md  README.txt
input_data_NCEP/: 0_down_soilw.sh  1_down_tmax.sh  2_down_hgt.sh  3_regrid_hgt_to_t62.sh  README.md  README.txt
notebooks/: 0a_process_CNN_inputs.ipynb  0b_calc_regional_averages.ipynb  1_train_CNN_and_calc_PDPs.ipynb  2_train_CNN_without_SM.ipynb  3_train_CNN_and_calc_100_shuffled_PDPs.ipynb  4_calc_individual_day_PDPs.ipynb  5_figures_ERA5.ipynb  5_figures_NCEP.ipynb  README.md  README.txt  analysis_fxns.py
processed_data_ERA5/: 0_make_region_dir.sh
processed_data_NCEP/: 0_make_region_dir.sh
project_utils/: load_region.py  model_utils.py  parameters.py  prepare_inputs.py  read_utils.py  utils.py
